k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-action-figure-ingress
  namespace: ai-action-figure
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  rules:
    - host: ai-action-figure.me
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: ai-action-figure-service
                port:
                  number: 3000
  tls:
    - hosts:
        - ai-action-figure.me
      secretName: ai-action-figure-tls
